# react-native-skottie

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-skia-skottie.podspec  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/cpp/jni/: JniLoad.cpp
android/cpp/jni/include/: JniSkiaSkottieView.h
android/src/main/java/com/skiaskottie/: DotLottieReader.java  SkiaSkottieModule.java  SkiaSkottiePackage.java  SkiaSkottieView.java
android/src/newarch/: SkiaSkottieSpec.java
android/src/oldarch/: SkiaSkottieSpec.java
cpp/: JsiSkSkottie.h  RNSkSkottieView.h  RNSkTime.cpp  RNSkTime.h  react-native-skia-skottie.cpp  react-native-skia-skottie.h
cpp/modules/skottie/include/: ExternalLayer.h  Skottie.h  SkottieProperty.h
cpp/modules/skottie/src/text/: SkottieShaper.h
example/: maestroTest.yaml  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/skiaskottieexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/skiaskottieexample/: MainActivity.java  MainApplication.java
example/ios/: Podfile
example/ios/SkiaSkottieExample/: AppDelegate.mm
example/ios/SkiaSkottieExample.xcodeproj/: project.pbxproj
example/ios/SkiaSkottieExample.xcodeproj/xcshareddata/xcschemes/: SkiaSkottieExample.xcscheme
example/ios/SkiaSkottieExampleTests/: SkiaSkottieExampleTests.m
example/src/: App.tsx
ios/: BridgeDotLottieReader.mm  DotLottieReader.m  SkiaSkottie.h  SkiaSkottie.mm  SkiaSkottieViewManager.mm
ios/SkiaSkottie.xcodeproj/: project.pbxproj
package/: .gitignore  README.md  package.json  react-native-skia-skottie.podspec  tsconfig.build.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
package/android/cpp/jni/include/: JniSkiaSkottieView.h
package/android/src/main/: AndroidManifest.xml
package/android/src/main/java/com/skiaskottie/: DotLottieReader.java  SkiaSkottieModule.java  SkiaSkottiePackage.java  SkiaSkottieView.java  SkiaSkottieViewManager.java
package/android/src/main/res/raw/: hands.riv
package/cpp/: .clang-format  JsiSkSkottie.h  RNSkSkottieView.h  RNSkTime.cpp  RNSkTime.h  react-native-skia-skottie.h
package/example/: Gemfile  app.json  global.d.ts  index.js  metro.config.js  package.json
package/example/android/: build.gradle  settings.gradle
package/example/android/app/: build.gradle
package/example/android/app/src/debug/: AndroidManifest.xml
package/example/android/app/src/main/java/com/skiaskottieexample/: MainActivity.java  MainActivity.kt  MainApplication.kt
package/example/android/app/src/main/res/values/: strings.xml
package/example/android/app/src/release/java/com/skiaskottieexample/: ReactNativeFlipper.java
package/example/ios/: .xcode.env.local  File.swift  Podfile
package/example/ios/SkiaSkottieExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  PrivacyInfo.xcprivacy
package/example/ios/SkiaSkottieExample.xcodeproj/: project.pbxproj
package/example/ios/SkiaSkottieExample.xcworkspace/: contents.xcworkspacedata
package/example/src/: App.tsx  ReproductionFont.tsx
package/example/src/animations/: index.ts
package/ios/: DotLottieReader.h  SkiaSkottieViewManager.h  SkiaSkottieViewManager.mm
package/scripts/: clang-format.sh
package/src/: NativeSkottieModule.ts  SkiaViewApi.ts  SkottieView.tsx  index.tsx
scripts/: clang-format.sh
src/: NaitveSkiaSkottieView.tsx  NativeSkiaSkottie.ts  NativeSkottieModule.ts  SkiaSkottieView.tsx  index.tsx  reanimatedWrapper.ts  types.ts
